@@ -287,3 +287,4 @@ But we need the fix for issue #29 first.
 10/01/15-14:17:34: Working on issue #43: added Message Handler class to support reading/writing messages on lua side.
 10/01/15-16:15:36: Working on issue #44: Sending message in proper format for balance_value change.
 10/01/15-16:22:06: Working on issue #44: using serpent to log table content.
+10/01/15-23:18:22: Working on issue #38: Added initial support for display of the balance evolution in lua control app.
